# fierywhip

./: .gitignore  .gitmodules  MANIFEST.in  README.md  matrix_plot.py  pyproject.toml  requirements.txt  run_new.py  trigdat_fit.py  tte_fit.py
eff_area/: Untitled.ipynb  fit_.txt  fit_live.points  fit_phys_live-birth.txt  fit_phys_live.points  fit_summary.txt  normalization_trigdat.ipynb  pyproject.toml  run_eff.py  swift_grbs.txt  test.yml  tte_fit.py
eff_area/effarea.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
eff_area/effarea/data/: data.py  grbs.py  grbs.txt
eff_area/effarea/detectors/: detectors.py
eff_area/effarea/model/: model.py
eff_area/effarea/utils/: swift.py
eff_area/src/data/: Untitled.ipynb
eff_area/src/eff_area.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
eff_area/src/effarea/: tte_fit.py_old
eff_area/src/effarea/data/: Fermi_Swift.lis  grbs.txt
eff_area/src/effarea/io/: balrog_like_add.py  plotting.py
eff_area/src/effarea/utils/: detectors.py  swift.py
eff_area/src/io/: downloading.py
effarea/data/: grbs.py
effarea/detectors/: detectors.py
effarea/io/: export.py  plot_dest_dist.py  plotting.py
effarea/model/: model.py
fierywhip/: run_eff.py
fierywhip/config/: configuration.py
fierywhip/data/: Fermi_Swift.lis  balrog_localizations.py  blocked_dets.csv  full_jcg_list.csv  full_jgc_list.csv  gbm_flux_fluence.xlsx  grbs.py  huntsville.csv  huntsville_det_mapping.csv  ipn.csv  ipn_all_data.csv  update_jcg_list.py  watson.txt
fierywhip/detectors/: detectors.py  timeselection.py
fierywhip/frameworks/: balrog_localizations.py  eac.py  grbs.py
fierywhip/healpix/: healpix.py
fierywhip/io/: balrog_like_add.py  downloading.py  export.py  (+3 more)
recreate_berlato/: Untitled.ipynb  localize_trigdat.py  table.csv
(+35 files in other folders)
