[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "effarea"
version = "0.0.1"
authors = [
  { name="Tobi Preis", email="tpreis@mpe.mpg.de" },
]
description = "Test continuity of effective area correction of Fermi/GBM"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU License",
    "Operating System :: OS Independent",
]
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["./"]
